--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Network Intelligence India Private Limited</p>
 				</div>
 				<div class="col">
-					<img src="" alt="Company Logo">
+					<img src="company_logo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
